2018-05-03  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r231223 and r231288.
        https://bugs.webkit.org/show_bug.cgi?id=185256

        The change in r231223 breaks internal builds, and r231288 is a
        dependent change. (Requested by ryanhaddad on #webkit).

        Reverted changesets:

        "Use default std::optional if it is provided"
        https://bugs.webkit.org/show_bug.cgi?id=185159
        https://trac.webkit.org/changeset/231223

        "Use pointer instead of
        std::optional<std::reference_wrapper<>>"
        https://bugs.webkit.org/show_bug.cgi?id=185186
        https://trac.webkit.org/changeset/231288

2018-05-03  Ryan Haddad  <ryanhaddad@apple.com>

        Unreviewed, rolling out r231253.

        The API test added with this change is crashing on the bots.

        Reverted changeset:

        "Web Inspector: opt out of process swap on navigation if a Web
        Inspector frontend is connected"
        https://bugs.webkit.org/show_bug.cgi?id=184861
        https://trac.webkit.org/changeset/231253

2018-05-03  Youenn Fablet  <youenn@apple.com>

        A MediaStream being played should allow removing some of its tracks
        https://bugs.webkit.org/show_bug.cgi?id=185233

        Reviewed by Eric Carlson.

        Update the tracks out of the for loop.
        Test: fast/mediastream/change-tracks-media-stream-being-played.html

        * platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:
        (WebCore::updateTracksOfType):

2018-05-03  Miguel Gomez  <magomez@igalia.com>

        WebCore::TextureMapperLayer object used after freed
        https://bugs.webkit.org/show_bug.cgi?id=184729

        Reviewed by Michael Catanzaro.

        Replace the raw pointers with WeakPtr for effectTarget, maskLayer and replicaLayer
        inside TextureMapperLayer.

        * platform/graphics/texmap/TextureMapperLayer.cpp:
        (WebCore::TextureMapperLayer::~TextureMapperLayer):