@@ -1,3 +1,13 @@
+2018-05-03  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        WebKit should send fake macOS user agent to docs.google.com
+        https://bugs.webkit.org/show_bug.cgi?id=185165
+
+        Reviewed by Carlos Garcia Campos.
+
+        * TestWebKitAPI/Tests/WebCore/UserAgentQuirks.cpp:
+        (TestWebKitAPI::TEST):
+
 2018-05-03  Valerie R Young  <valerie@bocoup.com>
 
         test262/Runner.pm: performance improvements
