@@ -1,3 +1,14 @@
+2018-05-03  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        WebKit should send fake macOS user agent to docs.google.com
+        https://bugs.webkit.org/show_bug.cgi?id=185165
+
+        Reviewed by Carlos Garcia Campos.
+
+        * platform/UserAgentQuirks.cpp:
+        (WebCore::urlRequiresMacintoshPlatform):
+        (WebCore::urlRequiresLinuxDesktopPlatform):
+
 2018-05-03  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, rolling out r231223 and r231288.
